--- a/workout-charts/package.json
+++ b/workout-charts/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "fitstats",
+  "name": "workout-charts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
     "@nivo/line": "^0.87.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "d3": "^7.9.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "react-validation": "^3.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,9 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.13"
-  },
-  "homepage": "https://pankajmohan.github.io/fitstats/"
+  }
 }
